[package]
name = "flare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
reth-exex = { git = "https://github.com/paradigmxyz/reth" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
reth-provider = { git = "https://github.com/paradigmxyz/reth" }
eyre = "0.6.12"
futures = "0.3.30"
alloy-sol-types = { version = "0.7.2", features = ["json"] }
once_cell = "1.19.0"
alloy-rlp = "0.3.4"
foundry-blob-explorers = { git = "https://github.com/foundry-rs/block-explorers" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "af788af", features = ["kzg"]}
